<resources>
    <string name="app_name">Loodos We</string>
    <string name="signUp">Hesabınız yoksa, buradan üye olabilirsiniz</string>
    <string name="btn_login">Giriş</string>
    <string name="email_hint">Kullanıcı Adı:</string>
    <string name="password_hint">Şifre:</string>
    <string name="img_loodos">loodos icon</string>
    <string name="btn_txt_calisanbilgi">Çalışan Bilgileri</string>
    <string name="btn_txt_uygulamalar">Uygulamalar</string>
    <string name="minimum_password">Şifre en az 6 karakter olmalıdır</string>
    <string name="auth_failed">Oturum açma başarısız oldu!</string>
    <string name="default_text">Default Text</string>
    <string name="btn_mesaj">Mesaj</string>
    <string name="btn_email">E-Mail</string>
    <string name="btn_signUp">Üye Ol</string>
    <string name="hint_signUp_name">Ad Soyad :</string>
    <string name="hint_signUp_email">E-mail :</string>
    <string name="hint_signUp_loodosPosition">Loodos\'taki Pozisyonu:</string>
    <string name="hint_signUp_phone">Telefon Numarası :</string>
    <string name="btn_logOut">Çıkış Yap</string>
    <string name="btn_txt_notifications">Duyurular</string>
    <string name="add_notification">Duyuru Ekle</string>
    <string name="btn_send">Gönder</string>
    <string name="notification_titleH">Başlığı girin</string>
    <string name="notification_bodyH">İçeriği girin</string>
    <string name="notification_title">Başlık</string>
    <string name="notification_body">İçerik</string>
    <string name="userDetails">Kullanıcı Detayları</string>
    <string name="notifications">Bildirimler</string>
    <string name="notificationAdd">Bildirim Ekle</string>
    <string name="techNews">Teknolojik Gelişmeler</string>
    <string name="btn_edit">Düzenle</string>
    <string name="smsgönder">SMS Gönder</string>
    <string name="mobilveri">Mobil Veri</string>
    <string name="wifi">WI-FI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">Under Construction</string>
    <string name="download">İNDİR</string>
    <string name="connectionErrorTryAgain">Uygulama açılırken hata oluştu, lütfen daha sonra tekrar deneyin</string>
    <string name="connectionErrorCheckNetwork">Uygulama açılırken hata oluştu, internet bağlantınızı kontrol edin</string>
    <string name="loginErrorTryAgain">Oturum açılırken sorun oluştu, lütfen tekrar deneyin</string>
    <string name="fillAreasTryAgain">Profil resminizi ve tüm alanları doldurup tekrar deneyin!</string>
    <string name="notfSendWithTitle"> başlıklı bildirimiziz gönderildi</string>
    <string name="signUpLoginError">Yeni kayıt oluşturuldu ancak oturum açmada hata oluştu. Lütfen oturum açmayı deneyin.</string>
    <string name="signUpProfileImageUploadError">Profil resmini yüklerken hata oluştu. Kullanıcı Detayları sayfasından resminizi güncelleyebilirsiniz.</string>
    <string name="signUpDbSaveSuccess">Kullanıcı kaydetme Başarılı</string>
    <string name="detailImageUploadError">Resim yükleme başarısız. Daha sonra tekrar deneyin.</string>
    <string name="changesSaved">Değişiklikler Kaydedildi.</string>
    <string name="changesFailedTryAgain">Değişiklikler uygulanamadı, daha sonra tekrar deneyiniz.</string>
    <string name="changesSavedOffline">Değişiklikleriniz online olduğunuzda uygulanmak üzere kaydedildi.</string>
    <string name="connectionError">Bağlantı hatası</string>
    <string name="checkConnectionToLogin">Oturum açmak için internet bağlantınızı kontrol edin.</string>
    <string name="missingMailAddress">Email adresinizi yazınız!</string>
    <string name="missingPassword">Şifrenizi Yazınız!</string>
    <string name="needNetworkToChangeImage">Resminizi değiştirmek için online olmalısınız, bağlantınızı açıp tekrar deneyin.</string>
    <string name="notfAddMissingAreas">Tüm alanları doldurmalısınız, alanları doldurup tekrar deneyin.</string>
    <string name="splashLoginErrorTryAgain">Uygulama açılırken hata oluştu, lütfen daha sonra tekrar deneyin</string>
    <string name="splashLoginErrorCheckNetwork">Uygulama açılırken hata oluştu, internet bağlantınızı kontrol edin</string>
    <string name="error_mustBeFilled">Bu alan boş bırakılamaz, alanı doldurup tekrar deneyin.</string>
    <string name="error_missingImage">Profil resmi boş bırakılamaz, profil resminizi seçip tekrar deneyin.</string>
    <string name="LoodosWe">Loodos Biz</string>
    <string name="hint_signUp_skype">Skype ID:</string>
</resources>
