<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/genarBackground"
    tools:context="com.genar.portal.activity.NotificationAddActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:text="@string/notification_title"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notificationadd_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/notification_titleH"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/notification_body"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/notificationadd_title"
        app:layout_constraintTop_toBottomOf="@+id/notificationadd_title" />

    <EditText
        android:id="@+id/notificationadd_notfbody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_border"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/notification_bodyH"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/notificationadd_btn_send"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/notificationadd_title"
        app:layout_constraintRight_toRightOf="@+id/notificationadd_title"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/notificationadd_btn_send"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#75aaff"
        android:text="@string/btn_send"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/notificationadd_notfbody" />

</android.support.constraint.ConstraintLayout>
