<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/genarBackground"
    tools:context="com.genar.portal.activity.SignUp.SignUpActivity">




    <EditText
        android:id="@+id/signup_fullname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_signUp_name"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toTopOf="@+id/detail_guide_top15"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_signUp_email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toBottomOf="@+id/signup_fullname" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_loodosposition"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_signUp_loodosPosition"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_signUp_phone"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toBottomOf="@+id/signup_loodosposition" />

    <EditText
        android:id="@+id/signup_skype"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_signUp_skype"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/signup_btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_signUp"
        android:textColor="@color/genarDarker"
        app:layout_constraintBottom_toTopOf="@+id/guide_btn_signup"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left15"
        app:layout_constraintRight_toLeftOf="@+id/guide_right15"
        app:spinning_bar_color="@color/genarDarker"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signup_profile_image"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:spinning_bar_width="4dp"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        android:clickable="true"
        android:src="@drawable/profile_image"
        android:visibility="visible"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_guide_top15"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide_btn_signup"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_left15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_right15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_guide_top15"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</android.support.constraint.ConstraintLayout>
